argocd/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-nginx
  labels:
    app: sandbox-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sandbox-nginx
  template:
    metadata:
      labels:
        app: sandbox-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.27.1
        ports:
        - containerPort: 80
