argocd/deployment-sabakan.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-bot-sabakan
  namespace: argocd
  labels:
    app: discord-bot-sabakan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord-bot-sabakan
  template:
    metadata:
      labels:
        app: discord-bot-sabakan
    spec:
      containers:
      - name: sabakan
        image: i544c/discord-bot-sabakan:0.4
        ports:
        - containerPort: 3000
