argocd/service-kourier.yaml
apiVersion: v1
kind: Service
metadata:
  name: kourier
  namespace: knative-serving
  labels:
    app.kubernetes.io/component: net-kourier
    app.kubernetes.io/name: knative-serving
    networking.knative.dev/ingress-provider: kourier
spec:
  type: ClusterIP
  selector:
    app: 3scale-kourier-gateway
  ports:
  - name: http2
    protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 31438
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8443
    nodePort: 31820
