argocd/service-sabakan.yaml
apiVersion: v1
kind: Service
metadata:
  name: discord-bot-sabakan
  namespace: argocd
spec:
  selector:
    app: discord-bot-sabakan
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
