argocd/service-trust-rank-checker.yaml
apiVersion: v1
kind: Service
metadata:
  name: trust-rank-checker
  namespace: argocd
spec:
  selector:
    app: trust-rank-checker
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
