argocd/ingress-backstage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backstage
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
  - host: backstage.k8s.i544c.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backstage
            port:
              name: http-backend
  tls:
  - hosts:
    - backstage.k8s.i544c.me
    secretName: k8s-i544c-me-secret
