argocd/ingress-forgejo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-forgejo
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
  - host: git.k8s.i544c.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: forgejo-http
            port:
              name: http
  tls:
  - hosts:
    - git.k8s.i544c.me
    secretName: k8s-i544c-me-secret
