argocd/ingress-kourier.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kourier
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
    - host: "*.default.knative.k8s.i544c.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-kourier
                port:
                  number: 80
  tls:
    - hosts:
      - "*.default.knative.k8s.i544c.me"
      secretName: knative-k8s-i544c-me-secret
---
apiVersion: v1
kind: Service
metadata:
  name: service-kourier
  namespace: argocd
spec:
  type: ExternalName
  externalName: kourier.knative-serving.svc.cluster.local
